--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,56 @@
 h1 {
-  @extend %h1;
+  font-size: $fs-medium;
+  line-height: $lh-13;
+
+  @include media-breakpoint-up($md) {
+    font-size: 36px;
+  }
+
+  @include media-breakpoint-up($lg) {
+    font-size: 60px;
+    line-height: 1;
+  }
+}
+
+h2 {
+  letter-spacing: $usual-spacing;
+  text-transform: uppercase;
+  line-height: $lh-11;
+}
+
+h3 {
+  line-height: $lh-15;
+}
+
+h2,
+h3 {
+  margin-bottom: 20px;
+
+  font-size: $fs-medium;
+  color: $primary;
+
+  @include media-breakpoint-up($md) {
+    font-size: 36px;
+  }
+}
+
+h4 {
+  font-size: $fs-regular;
+  letter-spacing: $usual-spacing;
+  color: $primary;
+
+  text-transform: uppercase;
+
+  @include media-breakpoint-up($md) {
+    font-size: $fs-medium;
+  }
+}
+
+h5 {
+  font-size: $fs-regular;
+  line-height: 27px;
+
+  @include media-breakpoint-up($md) {
+    font-size: 22px;
+  }
 }
