--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,30 @@
-$c-gray: #eee;
+$dark: #333;
+$shadow: #00000040;
+$primary: #344f10;
+$light-green: #8c9772;
+$gray: #828282;
+$beige: #e4dfd3;
+$light: #f2f2f2;
+$error: #eb5757;
+
+$usual-spacing: 0.04em;
+$fs-medium: 24px;
+$fs-regular: 18px;
+$lh-11: 1.1;
+$lh-13: 1.3;
+$lh-15: 1.5;
+
+$md: 640px;
+$lg: 1100px;
+
+$duration-default: 0.3s;
+
+$grid-settings:
+  "justify-self" center,
+  "justify-self" end,
+  "align-self" end;
+
+$order-amount: 4;
+$gap-default: 20px;
+
+$anchor-indent: 20px;
